--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -11,7 +11,10 @@ plugins:
 
 nav:
     - Home: index.md
+    - Architecture: architecture.md
     - Roadmap: roadmap.md
+    - Join Us: join-us.md
+    - Disclaimer: disclaimer.md
     - About:
       - Contribution: Contrib/index.md
       - Tags: tags.md
@@ -55,7 +58,7 @@ theme:
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
-      primary: red
+      primary: deep purple
       accent: yellow
       toggle:
         # icon: material/lightbulb
@@ -65,8 +68,8 @@ theme:
     # Palette toggle for dark mode
     - media: "(prefers-color-scheme: dark)"
       scheme: slate
-      primary: red
-      accent: yellow
+      primary: deep purple
+      accent: indigo
       toggle:
         # icon: material/lightbulb-outline
         icon: material/brightness-7
