--- a/multinode/data/Dockerfile
+++ b/multinode/data/Dockerfile
@@ -6,13 +6,14 @@ ENV ACCEPT_EULA=Y
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-WORKDIR /aimelia
-COPY ./requirements.txt /requirements.txt
-COPY ./src /src
+WORKDIR /dataNode
+COPY ./requirements.txt ./requirements.txt
+COPY ./multinode/data .
 
 EXPOSE 8000
 
 RUN pip install -r requirements.txt
 
 # Debug mode, reloads the server when a file changes
-CMD ["uvicorn", "src.main:app", "--reload"]
+CMD ["uvicorn", "app:app", "--reload", "--port", "8000", "--host", "0.0.0.0"]
+
