Working data node

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,18 @@ services:
   #   networks:
   #     - default
 
+  aimelia-data:
+    build:
+      context: .
+      dockerfile: ./src/nodes/data/Dockerfile
+    working_dir: /src
+    ports:
+      - 8000:8000
+    volumes:
+      - ./src:/src
+    networks:
+      - default
+
   aimelia-inference:
     build:
       context: .
