--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,23 +1,22 @@
 site_name: AImelia x PredX
-# site_author: Pranesh Mukhopadhyay
+site_author: Pranesh Mukhopadhyay
 site_description: Proof of Concept for AImelia x PredX
 
 plugins:
   - search
   - tags:
       tags_file: tags.md
-  # - git-revision-date-localized:
-  #     enable_creation_date: true
 
 nav:
-    - Home: index.md
-    - Architecture: architecture.md
-    - Roadmap: roadmap.md
-    - Join Us: join-us.md
-    - Disclaimer: disclaimer.md
-    - About:
+  - Home: index.md
+  - Architecture: architecture.md
+  - Roadmap: roadmap.md
+  - Join Us: join-us.md
+  - Disclaimer: disclaimer.md
+  - About:
       - Contribution: Contrib/index.md
-      - Tags: tags.md
+  # - Tags: tags.md
+  - Changelog: CHANGELOG.md
 
 markdown_extensions:
   - def_list
@@ -54,7 +53,6 @@ theme:
     - navigation.tabs
 
   palette:
-
     # Palette toggle for light mode
     - media: "(prefers-color-scheme: light)"
       scheme: default
@@ -75,15 +73,6 @@ theme:
         icon: material/brightness-7
         name: Switch to light mode
 
-extra:
-  social:
-    - icon: fontawesome/brands/twitter
-      link: https://x.com/PredX_AI
-    - icon: fontawesome/brands/linkedin
-      link: https://www.linkedin.com/company/predx-ai
-    - icon: fontawesome/brands/github
-      link: https://github.com/Cointegrator/Aimelia_demo
-
 repo_url: https://github.com/Cointegrator/Aimelia_demo
 repo_name: Aimelia-Demo
 
@@ -92,7 +81,7 @@ extra:
     - icon: fontawesome/brands/twitter
       link: https://x.com/PredX_AI
     - icon: fontawesome/brands/github
-      link: https://github.com/Mukhopadhyay
+      link: https://github.com/Cointegrator/Aimelia_demo
       name: Aimelia on Github
     - icon: fontawesome/brands/linkedin
       link: https://www.linkedin.com/company/predx-ai
