--- a/src/nodes/inference/Dockerfile
+++ b/src/nodes/inference/Dockerfile
@@ -6,6 +6,9 @@ ENV ACCEPT_EULA=Y
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
+# Update pip
+RUN pip install --upgrade pip
+
 # WORKDIR /aimelia
 COPY ./requirements.txt ./requirements.txt
 COPY ./src /src
