Custom openapi specs for the endpoints

--- a/src/nodes/data/Dockerfile
+++ b/src/nodes/data/Dockerfile
@@ -2,21 +2,16 @@ FROM python:3.10
 
 ENV ACCEPT_EULA=Y
 
-# turns off writing .pyc files
 ENV PYTHONDONTWRITEBYTECODE=1
 ENV PYTHONUNBUFFERED=1
 
-# Update pip
 RUN pip install --upgrade pip
 
-# WORKDIR /aimelia
-COPY ./requirements.txt ./requirements.txt
+COPY ./src/nodes/data/requirements.txt ./requirements.txt
 COPY ./src /src
 
 EXPOSE 8000
 
 RUN pip install -r ./requirements.txt
 
-# CMD ["uvicorn", "src.main:app", "--reload", "--host", "0.0.0.0", "--port", "8001"]
-# CMD "uvicorn nodes.inference.app:app --reload --host 0.0.0.0 --port 8001"
 CMD ["uvicorn", "nodes.data.app:app", "--reload", "--host", "0.0.0.0", "--port", "8000"]
