--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,21 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
 annotated-types==0.7.0
 anyio==4.4.0
+async-timeout==4.0.3
+attrs==23.2.0
 beautifulsoup4==4.12.3
 certifi==2024.7.4
 charset-normalizer==3.3.2
 click==8.1.7
+distro==1.9.0
 dnspython==2.6.1
 email_validator==2.2.0
 exceptiongroup==1.2.2
 fastapi==0.111.1
 fastapi-cli==0.0.4
+frozenlist==1.4.1
+greenlet==3.0.3
 gunicorn==22.0.0
 h11==0.14.0
 httpcore==1.0.5
@@ -16,27 +23,49 @@ httptools==0.6.1
 httpx==0.27.0
 idna==3.7
 Jinja2==3.1.4
+jsonpatch==1.33
+jsonpointer==3.0.0
+langchain==0.2.11
+langchain-core==0.2.24
+langchain-openai==0.1.19
+langchain-text-splitters==0.2.2
+langsmith==0.1.94
 markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mdurl==0.1.2
+multidict==6.0.5
+numpy==1.26.4
+openai==1.37.1
+orjson==3.10.6
 packaging==24.1
+pandas==2.2.2
 pydantic==2.8.2
 pydantic-settings==2.3.4
 pydantic_core==2.20.1
 Pygments==2.18.0
+python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
+pytz==2024.1
 PyYAML==6.0.1
+regex==2024.7.24
 requests==2.32.3
 rich==13.7.1
 shellingham==1.5.4
+six==1.16.0
 sniffio==1.3.1
 soupsieve==2.5
+SQLAlchemy==2.0.31
 starlette==0.37.2
+tenacity==8.5.0
+tiktoken==0.7.0
+tqdm==4.66.4
 typer==0.12.3
 typing_extensions==4.12.2
+tzdata==2024.1
 urllib3==2.2.2
 uvicorn==0.30.3
 uvloop==0.19.0
 watchfiles==0.22.0
 websockets==12.0
+yarl==1.9.4
