--- a/requirements.txt
+++ b/requirements.txt
@@ -37,12 +37,14 @@ multidict==6.0.5
 numpy==1.26.4
 openai==1.37.1
 orjson==3.10.6
+outcome==1.3.0.post0
 packaging==24.1
 pandas==2.2.2
 pydantic==2.8.2
 pydantic-settings==2.3.4
 pydantic_core==2.20.1
 Pygments==2.18.0
+PySocks==1.7.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-multipart==0.0.9
@@ -51,15 +53,19 @@ PyYAML==6.0.1
 regex==2024.7.24
 requests==2.32.3
 rich==13.7.1
+selenium==4.23.1
 shellingham==1.5.4
 six==1.16.0
 sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.5
 SQLAlchemy==2.0.31
 starlette==0.37.2
 tenacity==8.5.0
 tiktoken==0.7.0
 tqdm==4.66.4
+trio==0.26.1
+trio-websocket==0.11.1
 typer==0.12.3
 typing_extensions==4.12.2
 tzdata==2024.1
@@ -67,5 +73,8 @@ urllib3==2.2.2
 uvicorn==0.30.3
 uvloop==0.19.0
 watchfiles==0.22.0
+webdriver-manager==4.0.2
+websocket-client==1.8.0
 websockets==12.0
+wsproto==1.2.0
 yarl==1.9.4
